--- a/style.css
+++ b/style.css
@@ -4,21 +4,21 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.reference-info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.reference-info__image {
   width: 100%;
 }
-.aaa .more_inf {
+.reference-info__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.reference-info { text-align: center;
 }
 }
 .centered-main-page-element {
@@ -143,11 +143,11 @@ ul li input[type=text] {
   display:none
 }
 
-ul li.editMode input[type=text] {
+ul li.edit-Mode input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.editMode label {
+ul li.edit-Mode label {
   display:none;
 }
