--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 .reference-info { text-align: center;
 }
 }
-.centered-main-page-element {
+.wrapper {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -31,7 +31,7 @@ body {
   display: inline-block;
   flex-grow: 1
 }
-.task-row-wrapper {
+.add-todo__wrapper {
   display: flex;
 }
 ul {
@@ -58,7 +58,7 @@ button:hover {
 }
 /* Heading */
 h3,
-label[for="new-task"] {
+label[for="add-todo__input"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -84,11 +84,11 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="new-task"] {
+label[for="add-todo__input"] {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+input#add-todo__input {
   width: 318px;
 }
 p > button:hover {
@@ -133,7 +133,7 @@ button.delete img:hover {
 }
 
 /* Completed */
-ul#completed-tasks label {
+ul#completed label {
   text-decoration: line-through
   color: #888;
 }
@@ -143,11 +143,11 @@ ul li input[type=text] {
   display:none
 }
 
-ul li.edit-Mode input[type=text] {
+ul li.edit input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.edit-Mode label {
+ul li.edit label {
   display:none;
 }
