--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ label[for="add-todo__input"] {
   display: block;
   margin: 0 0 20px;
 }
-input#add-todo__input {
+#add-todo__input {
   width: 318px;
 }
 p > button:hover {
@@ -120,20 +120,20 @@ li > label {
 li >    input[type="text"] {
   width: 226px
 }
-li > button.delete:hover {
+li > .delete:hover {
   color: #cf2323;
 }
-button.delete img {
+.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed label {
+#completed label {
   text-decoration: line-through
   color: #888;
 }
@@ -143,11 +143,11 @@ ul li input[type=text] {
   display:none
 }
 
-ul li.edit input[type=text] {
+.edit input[type=text] {
   display:inline-block;
   width:224px
 }
 
-ul li.edit label {
+.edit label {
   display:none;
 }
