--- a/style.css
+++ b/style.css
@@ -18,8 +18,10 @@ body {
 }
 
 @media (max-width:768px) {
-.reference-info { text-align: center;
-}
+
+  .reference-info {
+     text-align: center;
+  }
 }
 .wrapper {
   display: block;
