--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .add-todo__wrapper {
   display: flex;
@@ -120,7 +120,7 @@ li > label {
   width: 226px;
 }
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 li > .delete:hover {
   color: #cf2323;
@@ -136,18 +136,18 @@ li > .delete:hover {
 
 /* Completed */
 #completed label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 .edit input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .edit label {
