refactor: change class Names according to rule 2.1 from an advance level

--- a/style.css
+++ b/style.css
@@ -28,10 +28,9 @@ body {
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task__text {
   width: 56%;
   display: inline-block;
-  flex-grow: 1;
 }
 .add-todo__wrapper {
   display: flex;
@@ -48,7 +47,7 @@ input,
 button{
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -57,12 +56,12 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3A3a;
 }
 /* Heading */
 h3,
-label[for="add-todo__input"] {
+label[for="new-task-input"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -88,11 +87,11 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for="add-todo__input"] {
+label[for="new-task-input"] {
   display: block;
   margin: 0 0 20px;
 }
-#add-todo__input {
+#new-task-input {
   width: 318px;
 }
 section > button:hover {
@@ -100,7 +99,7 @@ section > button:hover {
 }
 
 /* Task list */
-li {
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;  
@@ -108,31 +107,31 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.task > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task__checkbox {
   margin: 0 10px;
 }
-li > label {
+.task > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task >    input[type="text"] {
   width: 226px;
 }
-li > .delete:hover {
+.task > .btn_delete:hover {
   color: #cf2323;
 }
-.delete img {
+.btn_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.delete img:hover {
+.btn_delete img:hover {
   transform: rotateZ(0);
 }
 
